--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,49 +1,122 @@
-<div class="py-10">
-  <!-- !Header Top -->
-  <div class="header_top container flex justify-between items-center">
-    <!-- log -->
-    <div class="logo">
-      <a href="#" class="flex items-center text-gray-900 hover:text-gray-900">
-        <img src="../assets/images/logo.png" class="w-16 h-16" alt="" />
-        <h2 class="leading-10 ml-5 text-teat-600 text-4xl">Organic Shop</h2>
-      </a>
+<div class="py-8">
+  <div class="container">
+    <!-- !Header Top -->
+    <div class="header_top flex justify-between items-center">
+      <!-- log -->
+      <div class="logo">
+        <a href="#" class="flex items-center text-gray-900 hover:text-gray-900">
+          <img src="../assets/images/logo.png" class="w-16 h-16" alt="" />
+          <h2 class="leading-10 ms-2 antialiased text-teat-600 text-4xl">
+            Organic Shop
+          </h2>
+        </a>
+      </div>
+      <!-- search -->
+      <div
+        class="searchArea flex justify-center items-center border border-gray-100 rounded-full"
+      >
+        <div class="px-3">
+          <img src="../assets/images/search.png" alt="" />
+        </div>
+        <input
+          type="text"
+          placeholder="Search here ..."
+          class="focus:outline-none px-3 border-0"
+        />
+        <button class="bg-gray-900 text-gray-300 py-2 px-4 rounded-full">
+          Search
+        </button>
+      </div>
+      <!-- profile -->
+      <div class="profile flex items-center space-x-2">
+        <a
+          href=""
+          class="flex items-center justify-center rounded-full w-12 h-12 hover:bg-gray-200"
+        >
+          <img src="../assets/images/heart.png" alt="" />
+        </a>
+        <a
+          href=""
+          class="flex items-center justify-center rounded-full w-12 h-12 hover:bg-gray-200 mx-1 relative"
+        >
+          <img src="../assets/images/u_shopping-bag.png" alt="" />
+          <span
+            class="bg-red-500 px-2 absolute -top-3 text-white -right-1 rounded-full w-4"
+            >2</span
+          >
+        </a>
+        <a
+          href=""
+          class="flex items-center justify-center rounded-full w-12 h-12 hover:bg-gray-200"
+        >
+          <img src="../assets/images/user.png" alt="" />
+        </a>
+        <a href="" class="text-gray-900 hover:no-underline">Account</a>
+      </div>
     </div>
-    <!-- search -->
-    <div
-      class="searchArea flex justify-center items-center border border-gray-100 rounded-full"
-    >
-      <img src="../assets/images/search.png" alt="" />
-      <input
-        type="text"
-        placeholder="Search here ..."
-        class="focus:outline-none px-3 border-0"
-      />
-      <button class="bg-gray-900 text-gray-300 py-2 px-4 rounded-full">
-        Search
+    <!-- !menuArea -->
+    <div class="flex justify-between items-center py-2 my-3">
+      <div class="w-1/3">
+        <div ngbDropdown class="d-inline-block">
+          <button
+            class="bg-green-600 relative rounded-xl w-96 flex justify-between items-center px-3 py-2 text-white font-medium"
+            id="dropdownBasic1"
+            ngbDropdownToggle
+          >
+            <img src="../assets/images/menu-right.png" alt="" />
+            All Categories
+            <!-- <img
+              class="absolute right-10"
+              src="../assets/images/chevron-down.png"
+              alt=""
+            /> -->
+          </button>
+          <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+            <button ngbDropdownItem>Action - 1</button>
+            <button ngbDropdownItem>Another Action</button>
+            <button ngbDropdownItem>Something else is here</button>
+          </div>
+        </div>
+      </div>
+      <div class="w-auto flex items-center justify-center space-x-5 relative">
+        <a href="#" class="active text-gray-900 text-base">Home</a>
+        <a href="#" class="text-gray-900 text-base">Shop</a>
+        <a href="#" class="text-gray-900 text-base">Contact</a>
+      </div>
+      <div class="min-w-max">
+        <a href="#" class="flex items-center space-x-2 text-orange-500">
+          <img src="../assets/images/u_percentage.png" alt="" />
+          Special Offers
+        </a>
+      </div>
+    </div>
+  </div>
+  <!-- !heroSection -->
+  <div
+    class="mx-10 bg-green-100 flex justify-around items-center space-x-10 rounded-xl"
+  >
+    <div class="w-48">
+      <span class="text-green-600 text-xl font-bold">Save upto 30%</span>
+      <h2 class="text-4xl font-bold font-sans block py-3">
+        Organic Vegetables Farm Organic 100%
+      </h2>
+      <p class="text-sm text-gray-500">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum nihil cum
+        reiciendis odit quam voluptas nisi molestiae voluptatem, possimus veniam
+        dolores voluptate eius, maxime nobis corporis? Deserunt deleniti quam
+        dolore?
+      </p>
+
+      <button
+        class="px-5 py-2 rounded-full text-base font-semibold bg-green-600 my-5 text-gray-200"
+      >
+        Shop
       </button>
     </div>
-    <!-- profile -->
-    <div class="profile flex items-center space-x-2">
-      <a
-        href=""
-        class="rounded-full w-6 h-6 hover:bg-gray-200 hover:border-2 hover:text-indigo-600 mx-1 p-2"
-      >
-        <img src="../assets/images/heart.png" alt="" />
-      </a>
-      <a
-        href=""
-        class="rounded-full w-6 h-6 hover:bg-gray-200 mx-1 p-2 relative"
-      >
-        <img src="../assets/images/u_shopping-bag.png" alt="" />
-        <span
-          class="bg-red-600 text-white font-semibold rounded-full w-2 h-2 p-1 absolute inset-x-0"
-          >3</span
-        >
-      </a>
-      <a href="" class="rounded-full w-6 h-6 hover:bg-gray-200 mx-1 p-2">
-        <img src="../assets/images/user.png" alt="" />
-      </a>
-      <a href=""> Account </a>
-    </div>
+    <img
+      class="min-w-max pt-10"
+      src="../assets/images/fococlipping-20220128-2129 1.png"
+      alt=""
+    />
   </div>
 </div>
