--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -1,1 +1,5 @@
 <app-search-category></app-search-category>
+
+<app-single-product></app-single-product>
+
+<app-popular-brands></app-popular-brands>
