--- a/src/app/components/search-category/search-category.component.html
+++ b/src/app/components/search-category/search-category.component.html
@@ -1,4 +1,4 @@
-<div class="category">
+<div class="category mb-4">
   <div class="categoryTitle w-full border-b-1 border-gray-300 relative mb-3">
     <h2 class="text-3xl font-bold secTitle pb-2">Search By Category</h2>
   </div>
